Arreglos pagina main

--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -40,8 +40,8 @@
  
  header{
     background: url(https://giffiles.alphacoders.com/153/15370.gif);
-    height: 100vh;
-    width: 100%;
+    height: 600px;
+    max-width: 1920px;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -50,11 +50,12 @@
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
+    align-items: center;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-flow: column;
-    filter: brightness(0.80);
+    margin:auto;
+    
 }
 
 @media only screen and (max-width: 767px){
@@ -75,9 +76,19 @@ header a {
 	background: #262626;
 	padding: 10px 30px;
 	margin-top: 10px;
+    filter: brightness(1);
 }
         header p {
 	padding: 0 30%;
 	text-align: center;
 	color: #fff;
+    filter: brightness(1);
         }
+/* .centroMessi{
+ width: 1600px;
+ margin:auto;
+} */
+.content{
+    max-width: 1720px;
+    margin:auto;
+}
