--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -90,3 +90,16 @@ header a {
     background: rgb(33,37,41);
     color: white;
 }
+
+.redes{
+  background-color: #262626;
+  width: 70%;
+  padding: 10px;
+  margin:auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+ height: 8%;
+  color: white;
+  align-items: center;
+  display: flex;
+}
