Cambios realizados a descripcion de personaje en Mainpage

--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -2,6 +2,7 @@
  body{
     padding:0px;
     margin: 0;
+    margin-top:100px;
     
  }
  .img-title{
@@ -124,23 +125,45 @@ header a {
     background: rgb(33,37,41);
     color: white;
 }
-
+.Descripcion{
+    color: white;
+}
 .redes{
+  border-radius: 15px;
   background-color: #262626;
   width: 70%;
-  padding: 10px;
+  padding: 1px;
   margin:auto;
   margin-top: 1%;
   margin-bottom: 1%;
   height: 8%;
- border-top-left-radius: 1200px;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 
 }
 .OurRed{
+    margin: 10px;
+    text-align: center;
+    justify-self: center;
     margin-top: 10px;
     line-height: normal;
     display: inline-block;
     vertical-align: middle;
     color: white;
+    font-size: 30px;
+    
+}
+.Red{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    margin:10px;
+    margin-top: 0px;
+}
 
+.Red:hover{
+    transition-duration: 0.2s;
+    background-color: black;
 }
