--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -167,3 +167,35 @@ header a {
     transition-duration: 0.2s;
     background-color: black;
 }
+.heroesDesc{
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #ffffff;
+    border: none;
+    color: #000000;
+    text-align: center;
+    font-size: 15px;
+    padding: 11px;
+    width: 79px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    text-decoration: none;
+
+}
+
+.heroesDesc:hover{
+    background-color: #e0e0e0;
+} 
+.butIcoHero{
+    max-width: 9px;
+    min-width: 9px;
+}
+.heroImg{   
+ max-height: 500px;
+}
+#myImage {
+    transition: opacity 1s ease-in-out;
+    opacity: 1;
+  }
+  
