--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -186,3 +186,44 @@ header h1 {
     transition-duration: 0.2s;
     background-color: black;
 }
+
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body{
+ background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_net.png') repeat;
+}
+.area{
+    margin: 0;
+    letter-spacing: 3px;
+  text-align:center;
+  font-size:6.5em;
+  color:#ffffff;
+  letter-spacing: -7px;
+  font-weight:700;
+  text-transform:uppercase;
+  animation:blur 2s ease-out infinite;
+  text-shadow:0px 0px 5px #4a4848,
+      0px 0px 7px #4a4848;
+      z-index: 999;
+      
+}
+
+@keyframes blur{
+  from{
+      text-shadow:0px 0px 10px #b5b1b1,
+      0px 0px 10px #b5b1b1,
+      0px 0px 25px #b5b1b1,
+      0px 0px 25px #b5b1b1,
+      0px 0px 25px #b5b1b1,
+      0px 0px 50px #b5b1b1,
+      0px 0px 50px #b5b1b1,
+      0px 0px 50px #7B96B8,
+      0px 0px 1000px #7B96B8,
+      0px 10px 50px #7B96B8,
+      0px 10px 50px #7B96B8,
+      0px 10px 50px #7B96B8,
+      0px 10px 50px #7B96B8,
+      0px -10px 50px #7B96B8,
+      0px -10px 50px #7B96B8;}
+}
