--- a/kyatsu/public/css/navbar.css
+++ b/kyatsu/public/css/navbar.css
@@ -1,25 +1,26 @@
 /* 31/03/23 Hecho por lucas y manuel  */
-  /* Firefox */
-  * {
+/* Firefox */
+* {
     scrollbar-width: auto;
     scrollbar-color: #2c2c2c #2c2c2c;
-  }
+}
 
-  /* Chrome, Edge, y Safari */
-  *::-webkit-scrollbar {
+/* Chrome, Edge, y Safari */
+*::-webkit-scrollbar {
     width: 12px;
-  }
+}
 
-  *::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background: rgba(0, 0, 0, 0.1);
-  }
+}
 
-  *::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background-color: #2c2c2c;
     border-radius: 8px;
     border: 3px solid #2c2c2c;
-  }
-  body {
+}
+
+body {
     overflow: overlay;
 
 }
@@ -38,7 +39,7 @@
     border: 4px solid white;
 }
 
-.results_pag{  
+.results_pag {
     overflow: hidden;
 }
 
@@ -57,30 +58,36 @@
     border-radius: 20px;
     padding: 0 20px;
 }
-#resultsUl{
+
+#resultsUl {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+
 #resultsUl li a {
-    border-bottom: 1px solid #ddd; 
-    margin-top: -1px; 
-    padding: 12px; 
+    border-bottom: 1px solid #ddd;
+    margin-top: -1px;
+    padding: 12px;
     text-decoration: none;
-    font-size: 18px; 
+    font-size: 18px;
     color: black;
-    display: block; /* Make it into a block element to fill the whole list */
-  
+    display: block;
+    /* Make it into a block element to fill the whole list */
+
 }
+
 #resultsUl li a:hover:not(.header) {
-    background-color: #949494; 
-  }
-#searchText{
-    margin-top: 1px; 
+    background-color: #949494;
+}
+
+#searchText {
+    margin-top: 1px;
     color: black;
     display: block;
     font-size: smaller;
 }
+
 .fa {
     box-sizing: border-box;
     padding: 10px;
@@ -102,11 +109,11 @@
     cursor: pointer;
 }
 
-#paginator{
-   opacity: 100%;
-    display:block;
+#paginator {
+    opacity: 100%;
+    display: none;
     background: white;
-    position:absolute; 
+    position: absolute;
     top: 35px;
     right: auto;
     padding: 0.2em;
@@ -120,7 +127,15 @@
 .search-bar:hover .input-search,
 .search-bar:valid .input-search {
     display: block;
+
 }
+
+.search-bar:valid #paginator {
+    display: block;
+
+}
+
+
 
 .search-bar:hover .fa,
 .search-bar:valid .fa {
@@ -139,25 +154,28 @@
     color: rgb(37, 36, 36);
     text-align: right;
     width: 10%;
- 
+
 }
 
 .search-bar:valid a {
     display: block;
 }
 
-.dropdownDark{
-    background-color: var(--bs-body-color); /* #212529 */
-    color:white;
+.dropdownDark {
+    background-color: var(--bs-body-color);
+    /* #212529 */
+    color: white;
     width: 100%;
 }
 
-.dropdownText{
-    color:white;
+.dropdownText {
+    color: white;
 }
+
 .dropdown:hover .dropdown-menu {
     display: block;
-    margin-top: 1; /* remove the gap so it doesn't close */
+    margin-top: 1;
+    /* remove the gap so it doesn't close */
     opacity: 0.9;
 }
 
@@ -167,7 +185,7 @@
     height: 100px;
     display:flex;
 } */
-.user_i{
+.user_i {
     width: 35px;
     height: 35px;
 }
