--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -219,30 +219,20 @@ header h1 {
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
   } */
- /*  .animate-image {
+  .animate-image {
     animation: wipe-in-top-right 1s;
   }
-   */
- /*  @keyframes wipe-in-top-right {
+  
+  @keyframes wipe-in-top-right {
     from {
       clip-path: polygon(-50% 50%, 50% 150%, 50% 150%, -50% 50%);
     }
     to {
       clip-path: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
     }
-  } */
-
-.animate-image{
-    animation: polygon-out-opposing-corners 1s;
-}
-@keyframes polygon-out-opposing-corners {
-    from {
-      clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
-    }
-    to {
-      clip-path: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
-    }
   }
+
+
   
   [transition-style="out:polygon:opposing-corners"] {
     animation: 1.5s cubic-bezier(.25, 1, .30, 1) polygon-out-opposing-corners both;
@@ -257,11 +247,10 @@ body{
 }
 .area{
     margin: 0;
-    letter-spacing: 3px;
   text-align:center;
   font-size:6.5em;
   color:#ffffff;
-  letter-spacing: -7px;
+  letter-spacing: -5px;
   font-weight:700;
   text-transform:uppercase;
   animation:blur 2s ease-out infinite;
