--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -2,7 +2,6 @@ body {
     padding: 0px;
     margin: 0;
     margin-top: 100px;
-
 }
 
 .img-title {
@@ -27,7 +26,6 @@ header {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
-
 }
 
 header::before {
@@ -93,6 +91,8 @@ header h1 {
     background-color: #ffffff;
     color: black;
     border-radius: 10px;
+
+
 }
 
 .Bdownload:after {
@@ -107,6 +107,8 @@ header h1 {
     opacity: 0;
     transition: all 0.5s;
     box-shadow: 0 0 10px 40px black;
+
+
 }
 
 .Bdownload:active:after {
@@ -126,6 +128,7 @@ header h1 {
 .content {
     max-width: 1720px;
     margin: auto;
+    
 }
 
 .cardTitle {
@@ -144,7 +147,7 @@ header h1 {
 .redes {
     border-radius: 15px;
     background-color: #262626;
-    width: 70%;
+    width: 90%;
     padding: 1px;
     margin: auto;
     margin-top: 1%;
@@ -155,7 +158,16 @@ header h1 {
     -moz-user-select: none;
     user-select: none;
 }
-
+.horizontalrule{
+    margin: auto;
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+    color: white;
+    opacity: 100%;
+    height: 0.1em;
+    max-width: 90%;
+ 
+}
 .redes_icon {
     display: contents;
     width: 20px;
@@ -171,7 +183,6 @@ header h1 {
     vertical-align: middle;
     color: white;
     font-size: 30px;
-
 }
 
 .Red {
@@ -187,7 +198,7 @@ header h1 {
     background-color: black;
 }
 
-.heroesDesc{
+.heroesDesc {
     display: inline-block;
     border-radius: 4px;
     background-color: #ffffff;
@@ -201,29 +212,28 @@ header h1 {
     cursor: pointer;
     margin: 5px;
     text-decoration: none;
-
 }
 
-.heroesDesc:hover{
+.heroesDesc:hover {
     background-color: #e0e0e0;
-} 
-.butIcoHero{
+}
+.butIcoHero {
     max-width: 9px;
     min-width: 9px;
 }
-.heroImg{   
- max-height: 500px;
+.heroImg {
+    max-height: 500px;
 }
 /* #myImage {
     animation: wipe-in-top-right 1s ease-in-out;
     -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
   } */
- /*  .animate-image {
+/*  .animate-image {
     animation: wipe-in-top-right 1s;
   }
    */
- /*  @keyframes wipe-in-top-right {
+/*  @keyframes wipe-in-top-right {
     from {
       clip-path: polygon(-50% 50%, 50% 150%, 50% 150%, -50% 50%);
     }
@@ -232,61 +242,64 @@ header h1 {
     }
   } */
 
-.animate-image{
+.animate-image {
     animation: polygon-out-opposing-corners 1s;
 }
 @keyframes polygon-out-opposing-corners {
     from {
-      clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
+        clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
     }
     to {
-      clip-path: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
+        clip-path: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
     }
-  }
-  
-  [transition-style="out:polygon:opposing-corners"] {
-    animation: 1.5s cubic-bezier(.25, 1, .30, 1) polygon-out-opposing-corners both;
-  }
+}
 
-
+[transition-style="out:polygon:opposing-corners"] {
+    animation: 1.5s cubic-bezier(0.25, 1, 0.3, 1) polygon-out-opposing-corners
+        both;
+}
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-body{
- background:url('http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_net.png') repeat;
+body {
+    background: url("http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_net.png")
+        repeat;
 }
-.area{
-    margin: 0;
-    letter-spacing: 3px;
-  text-align:center;
-  font-size:6.5em;
-  color:#ffffff;
-  letter-spacing: -7px;
-  font-weight:700;
-  text-transform:uppercase;
-  animation:blur 2s ease-out infinite;
-  text-shadow:0px 0px 5px #4a4848,
-      0px 0px 7px #4a4848;
-      z-index: 999;
-      
+.area { 
+    max-height: 50px;
+    margin: 1em;
+    text-align: center;
+    font-size: 6.5em;
+    color: #ffffff;
+    letter-spacing: -7px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-shadow: 0px 0px 5px #4a4848, 0px 0px 7px #4a4848;
+    z-index: 999;
+    animation: blurin 2s ease-in
+}
+ .area:hover{
+    animation: blur 2s ease-in-out infinite;
+
 }
 
-@keyframes blur{
-  from{
-      text-shadow:0px 0px 10px #b5b1b1,
-      0px 0px 10px #b5b1b1,
-      0px 0px 25px #b5b1b1,
-      0px 0px 25px #b5b1b1,
-      0px 0px 25px #b5b1b1,
-      0px 0px 50px #b5b1b1,
-      0px 0px 50px #b5b1b1,
-      0px 0px 50px #7B96B8,
-      0px 0px 1000px #7B96B8,
-      0px 10px 50px #7B96B8,
-      0px 10px 50px #7B96B8,
-      0px 10px 50px #7B96B8,
-      0px 10px 50px #7B96B8,
-      0px -10px 50px #7B96B8,
-      0px -10px 50px #7B96B8;}
+@keyframes blur {
+    from {
+        text-shadow: 0px 0px 25px #557d94a1,
+            0px 0px 50px #5084a78e, 0px 0px 50px #b5b1b183, 0px 0px 50px #7b96b87e,
+            0px 0px 1000px #7b96b871, 0px 10px 50px #7b96b865, 0px 10px 50px #7b96b862,
+            0px 10px 50px #7b96b873, 0px 10px 50px #7b96b818, 0px -10px 50px #7b96b813,
+            0px -10px 50px #7b96b802;
+    }
 }
 
+@keyframes blurin {
+    from {
+        text-shadow: 0px 0px 25px  #557d94a1,
+            0px 0px 50px #5084a78e, 0px 0px 50px #b5b1b183, 0px 0px 50px #7b96b87e,
+            0px 0px 1000px #7b96b871, 0px 10px 50px #7b96b865, 0px 10px 50px #7b96b862,
+            0px 10px 50px #7b96b873, 0px 10px 50px #7b96b818, 0px -10px 50px #7b96b813,
+            0px -10px 50px #7b96b802;
+    }
+    }
+}
