--- a/kyatsu/public/css/mainpage.css
+++ b/kyatsu/public/css/mainpage.css
@@ -4,16 +4,6 @@ body {
     margin-top: 100px;
 }
 
-.img-title {
-    font-size: 50px;
-    font-weight: 700;
-    margin: 0;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    color: #fff;
-    text-align: center;
-}
-
 header {
     position: relative;
     height: 600px;
@@ -46,9 +36,14 @@ header::before {
 
 @media only screen and (max-width: 767px) {
     header h1 {
-        font-size: 30px;
+        font-size: 100px;
+        font-weight: 700;
+        text-transform: uppercase;
+       text-shadow: 0px 0px 5px #4a4848, 0px 0px 7px #4a4848;
+        z-index: 999;
     }
 
+    header
     header p {
         display: none;
     }
@@ -76,10 +71,21 @@ header p {
 }
 
 header h1 {
+    user-select: none;
+    z-index: 999;
+    animation: blurin 2s ease-in;
+    text-transform: uppercase;
+    font-size: 6.5em;
+    font-weight: 700;
     margin: 0 30%;
     text-align: center;
     color: #fff;
     filter: brightness(1);
+    text-shadow: 0px 0px 5px #4a4848, 0px 0px 7px #4a4848;
+    z-index: 999;
+}
+header h1:hover{
+    animation: blur 2s ease-in-out infinite;
 }
 
 .Bdownload {
@@ -92,8 +98,6 @@ header h1 {
     background-color: #ffffff;
     color: black;
     border-radius: 10px;
-
-
 }
 
 .Bdownload:after {
@@ -108,8 +112,6 @@ header h1 {
     opacity: 0;
     transition: all 0.5s;
     box-shadow: 0 0 10px 40px black;
-
-
 }
 
 .Bdownload:active:after {
@@ -137,11 +139,6 @@ header h1 {
 
 .CrdRightSide {
     background-color : transparent;
-    color: rgb(31, 31, 31);
-}
-
-.Descripcion {
-    color:rgb(31, 31, 31);
 }
 
 .redes {
@@ -166,13 +163,11 @@ header h1 {
     opacity: 100%;
     height: 0.1em;
     max-width: 90%;
- 
 }
 .redes_icon {
     display: contents;
     width: 20px;
 }
-
 .OurRed {
     margin: 10px;
     text-align: center;
@@ -242,49 +237,13 @@ header h1 {
 
   } 
 
-
-
- 
-
-
-  
   [transition-style="out:polygon:opposing-corners"] {
     animation: 1.5s cubic-bezier(.25, 1, .30, 1) polygon-out-opposing-corners both;
   }
 
-
-
-[transition-style="out:polygon:opposing-corners"] {
-    animation: 1.5s cubic-bezier(0.25, 1, 0.3, 1) polygon-out-opposing-corners
-        both;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-body {
-    background: url("http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_net.png")
-        repeat;
-}
 .item-scroll{
     opacity: 0;
 }
-.area { 
-    max-height: 50px;
-    margin: 1em;
-    text-align: center;
-    font-size: 6.5em;
-    color: #ffffff;
-    letter-spacing: -7px;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-shadow: 0px 0px 5px #4a4848, 0px 0px 7px #4a4848;
-    z-index: 999;
-    animation: blurin 2s ease-in
-}
- .area:hover{
-    animation: blur 2s ease-in-out infinite;
-
- }
 
 @keyframes blur {
     from {
@@ -318,20 +277,7 @@ body {
         transform: none;
         transition-delay: 0.3s;
       }
-/* .nwn{
-    position: relative;
-    background-image: url(../img/hola.jpg);
-    height: 720px;
-    width:100%;
-    background-image: no-repeat;
-    background-image: fixed;
-    background-image: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    margin-bottom: 120px;
-} */
+
 .ewe{
     background-color: transparent;
     width: 90%;
@@ -339,7 +285,7 @@ body {
 }
 .nwn {
     position: relative;
-    height: 670px;
+    height: 660px;
     max-width: 1200px;
     align-items: center;
     justify-content: center;
@@ -399,14 +345,10 @@ body {
 .nwn h1 {
     margin: 0 30%;
     text-align: center;
-    
- 
 }
 .nwn h5 {
     margin: 0 10%;
     text-align: center;
-    
- 
 }
 .potente{
     display: flex;
