--- a/kyatsu/public/css/navbar.css
+++ b/kyatsu/public/css/navbar.css
@@ -30,9 +30,8 @@ body {
 
 .search-bar {
     position: absolute;
-    top: 50%;
-    left: 88%;
-    transform: translate(-50%, -50%);
+    left: 86%;
+    transform: translate(-50%);
     transition: all 1s;
     width: 50px;
     height: 50px;
@@ -42,15 +41,18 @@ body {
     border: 4px solid white;
 }
 
+@media only screen and (max-width: 767px) {
+    .search-bar{
+        left: 70%;
+    }
+}
 .results_pag {
     overflow: hidden;
 }
 
 
 .input-search {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: flex;
     width: 100%;
     height: 42.5px;
     line-height: 30px;
