--- a/kyatsu/public/css/navbar.css
+++ b/kyatsu/public/css/navbar.css
@@ -23,8 +23,9 @@ html {
     border: 3px solid #2c2c2c;
 }
 
-body {
+ body {
     overflow: overlay;
+    margin: 0;
 
 }
 
@@ -186,3 +187,44 @@ body {
     width: 35px;
     height: 35px;
 }
+
+
+ 
+ .horizontalrule{
+     margin: auto;
+     margin-top: 0.5em;
+     margin-bottom: 1em;
+     color: white;
+     opacity: 100%;
+     height: 0.1em;
+     max-width: 90%;
+ }
+ .footer_icon {
+     display: contents;
+     width: 20px;
+ }
+ .OurRed {
+     margin: 10px;
+     text-align: center;
+     justify-self: center;
+     margin-top: 10px;
+     line-height: normal;
+     display: inline-block;
+     vertical-align: middle;
+     color: white;
+     font-size: 30px;
+ }
+ 
+ .Red {
+     -webkit-user-select: none;
+     -moz-user-select: none;
+     user-select: none;
+     margin: 10px;
+     margin-top: 0px;
+ }
+ 
+ .Red:hover {
+     transition-duration: 0.2s;
+     background-color: black;
+ }
+ 
