noticias, eso creo jsajsa

--- a/kyatsu/public/css/heroes.css
+++ b/kyatsu/public/css/heroes.css
@@ -1,3 +1,4 @@
+/* HONOR A LOS LEALES, LARGA VIDA AL EMPERADOR DE LA HUMANIDAD  */
 body{
   background-image:url(https://i0.wp.com/gamingonphone.com/wp-content/uploads/2022/02/windrise_cover-1024x508.jpg);
   background-size: cover;
