--- a/kyatsu/public/css/historia.css
+++ b/kyatsu/public/css/historia.css
@@ -52,8 +52,9 @@ section {
     display: -o-flex;
 }
 
-#one h1, #two h1, #three h1, #four h1{
+#one a, #two a, #three a, #four a{
     z-index: 100;
+    font-size: 34px;
     color: azure;
 }
 
@@ -122,7 +123,7 @@ section {
   background-color: rgb(255, 255, 255);
   --scroll-gap: 2em;
   overflow: auto;
-  scroll-snap-type: y mandatory;
+
 }
 
 section {
